--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,9 @@ jobs:
 
         #4 Install Dependencies
       - name: Install Dependencies
-        run: flutter pub get
-        run: flutter pub upgrade --major-versions
+        run: | 
+          flutter pub get
+          flutter pub upgrade --major-versions
 
         #5 Setup Keystore
       - name: Decode Keystore
