--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,6 +102,6 @@ jobs:
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz"
+          artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz,build/ios/ipa/*.ipa"
           tag: v${{ env.VERSION }}
           token: ${{ secrets.TOKEN }}
